@@ -28,7 +28,8 @@
     <set var="TIFF_PLATFORM_SRC">
         <if cond="PLATFORM_UNIX=='1'">src/tiff/tif_unix.c</if>
         <if cond="PLATFORM_MACOSX=='1'">src/tiff/tif_unix.c</if>
-        <if cond="PLATFORM_OS2=='1'">src/tiff/tif_unix.c</if>
+        <if cond="PLATFORM_OS2=='1' and FORMAT!='watcom'">src/tiff/tif_unix.c</if>
+        <if cond="PLATFORM_OS2=='1' and FORMAT=='watcom'">src/tiff/tif_os2.c</if>
         <if cond="PLATFORM_WIN32=='1'">src/tiff/tif_win32.c</if>
         <if cond="PLATFORM_MACOS=='1'">src/tiff/tif_apple.c</if>
         <if cond="PLATFORM_MSDOS=='1'">src/tiff/tif_msdos.c</if>
@@ -41,6 +42,7 @@
         <include>$(INC_JPEG)</include>
         <cflags-borland>-w-8004 -w-8012 -w-8057 -w-8060 -w-8066</cflags-borland>
         <cflags-dmars>-w2</cflags-dmars>
+        <define cond="PLATFORM_OS2=='1' and FORMAT=='watcom'">OS2_32</define>
         <sources>
             $(TIFF_PLATFORM_SRC)
 		    src/tiff/tif_aux.c
