@@ -40,7 +40,7 @@
     <subproject id="samples">
         <installable>no</installable>
         <dir cond="FORMAT=='autoconf'">samples</dir>
-        <dir cond="FORMAT!='autoconf' and TOOLKIT in ['MSW','MGL']">../../samples</dir>
+        <dir cond="FORMAT!='autoconf' and TOOLKIT in ['PM','MSW','MGL']">../../samples</dir>
     </subproject>
     
     <if cond="FORMAT=='autoconf'">
@@ -145,8 +145,8 @@
     </if>
 
 
-    <!-- copy setup.h on DOS/Windows: -->    
-    <if cond="FORMAT!='autoconf' and TOOLKIT in ['MSW','MGL']">
+    <!-- copy setup.h on DOS/OS2/Windows: -->
+    <if cond="FORMAT!='autoconf' and TOOLKIT in ['PM','MSW','MGL']">
         <mkdir id="libdir">
             <dir>$(LIBDIRNAME)</dir>
         </mkdir>
@@ -162,7 +162,8 @@
 
         <set var="SETUP_H_SUBDIR">
             <if cond="WXUNIV=='1'">univ</if>
-            <if cond="WXUNIV=='0'">$(TOOLKIT_LOWERCASE)</if>
+            <if cond="WXUNIV=='0' and TOOLKIT!='PM'">$(TOOLKIT_LOWERCASE)</if>
+            <if cond="WXUNIV=='0' and TOOLKIT=='PM'">os2</if>
         </set>
         
         <copy-file-to-file-if-not-exist id="master_setup.h">
