@@ -494,6 +494,7 @@
     ( defined( __CYGWIN__ ) && defined( __WINDOWS__ ) ) || \
       (defined(__WATCOMC__) && __WATCOMC__ >= 1200) ) && \
     !defined(__DOS__) && \
+    !defined(__WXOS2__) && \
     !defined(__WXMOTIF__) && \
     !defined(__WXGTK__) && \
     !defined(__WXX11__) && \
@@ -560,4 +561,3 @@
 #endif
 
 #endif /* _WX_PLATFORM_H_ */
-
