@@ -212,6 +212,8 @@ void wxGenericColourDialog::OnPaint(wxPaintEvent& event)
 {
 #if !defined(__WXMOTIF__) && !defined(__WXPM__) && !defined(__WXCOCOA__)
   wxDialog::OnPaint(event);
+#else
+    wxUnusedVar(event);
 #endif
 
   wxPaintDC dc(this);
@@ -597,4 +599,3 @@ void wxGenericColourDialog::OnBlueSlider(wxCommandEvent& WXUNUSED(event))
 #endif // wxUSE_SLIDER
 
 #endif // wxUSE_COLOURDLG && !defined(__WXGTK20__)
-
